--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -9,3 +9,237 @@
   pages = {535},
 }
 
+% =======================
+% Conference
+% =======================
+
+@conference{CMS,
+	AUTHOR 		= "A. Mirdha and A. Jain and K. Shah", 
+	TITLE 		= "{Comparative Analysis of Open Source Content Management Systems}", 
+	BOOKTITLE = "2014 IEEE International Conference on Computational Intelligence and Computing Research",
+	ADDRESS   = "Coimbatore, India",
+	MONTH     = "December",
+	PAGES     = "1--4",
+	YEAR 			= 2014
+}
+
+
+
+
+% =======================
+% Article
+% =======================
+
+
+
+% =======================
+% Book
+% =======================
+
+
+
+% =======================
+% Internet
+% =======================
+
+@misc{MUSARCH,
+	title = {Museum Archive software project},
+	howpublished = {Site do projeto MUSARCH},
+	url= {http://musarch.com/},
+	urlaccessdate = {23 de Junho de 2018}
+}
+
+
+@misc{Adlib,
+	title={Adlib Museum Lite},
+	howpublished = {Site do projeto Adlib Museum},
+	url={http://www.adlibsoft.com/products/adlib-museum-lite},
+	urlaccessdate="23 de Junho de 2018"
+}
+
+
+@misc{Museolog,
+	title={Museums Digital Catalog},
+	howpublished = {Site do projeto Museolog},
+	url={http://museolog.unesco.kz/i.php?content=home},
+	urlaccessdate="23 de Junho de 2018"
+}
+
+@misc{eHive,
+	title={eHive},
+	howpublished = {Site do projeto eHive},
+	url={http://info.ehive.com/},
+	urlaccessdate="24 de Junho de 2018"
+}
+
+@misc{CSpace,
+	title={CollectionSpace},
+	howpublished = {Site do projeto CollectionSpace},
+	url={http://www.collectionspace.org},
+	urlaccessdate="24 de Junho de 2018"
+}
+
+@misc{CSpace2,
+	title={CollectionSpace},
+	howpublished = {Lista dos browsers suportados pelo projeto},
+	url={https://wiki.collectionspace.org/display/DOC/Supported+Browsers},
+	urlaccessdate="24 de Junho de 2018"
+}
+
+@misc{ResourceMate,
+	title={ResourceMate},
+	howpublished = {Site do projeto ResourceMate},
+	url={https://www.resourcemate.com/},
+	urlaccessdate="24 de Junho de 2018"
+}
+
+@misc{PastPerfect,
+	title={PastPerfect Museum Software},
+	howpublished = {Site do projeto PastPerfect},
+	url={http://www.museumsoftware.com/},
+	urlaccessdate="28 de Junho de 2018"
+}
+
+@misc{Argus,
+	title={Argus},
+	howpublished = {Site do projeto Argus},
+	url={https://lucidea.com/argus/},
+	urlaccessdate="28 de Junho de 2018"
+}
+
+@misc{OmekaOrg,
+	title={Omeka.org},
+	howpublished = {Site do projeto Omeka.org},
+	url={https://omeka.org/},
+	urlaccessdate= "28 de Abril de 2019"
+}
+
+@misc{OmekaNet,
+	title={Omeka.net},
+	howpublished = {Site do projeto Omeka.net},
+	url={https://www.omeka.net/},
+	urlaccessdate= "28 de Abril de 2019"
+}
+
+@misc{CA,
+	title={Collective Access},
+	howpublished = {Site do projeto Collective Access},
+	url={https://collectiveaccess.org},
+	urlaccessdate="28 de Abril de 2019"
+}
+
+
+
+
+% =======================
+% Techreport
+% =======================
+
+
+@techreport{PeopleTracking,
+	AUTHOR      = "{Northstream}",
+	TITLE       = "{People Tracking - A potential breakthrough LBS application}",
+	INSTITUTION = "Northstream",
+	YEAR 		    = 2005
+}
+
+
+
+% =======================
+% Diversos
+% =======================
+
+@mastersthesis{DcmMultiSystem,
+	AUTHOR  = "Paul Kemppi",
+	TITLE   = "{Database Correlation Method for Multi-System Location}",
+	YEAR    = 2005,
+	SCHOOL  = "Helsinki University of Technology"
+}
+
+@misc{WiFiUerj,
+	AUTHOR  = {Adriano Souza Gonzaga and Alexandre Veiga Marçal and Ivan Klavin Ferreira},
+	TITLE   = {Levantamento de Redes Wi-Fi 802.11 no Campus da UERJ},
+	YEAR    = 2008,
+	NOTE  = {Monografia (Graduação) - Universidade do Estado do Rio de Janeiro}
+}
+
+@phdthesis{BORKOWSKI2008,
+	author        = "J. Borkowski",
+	title         = "{On Applicable Cellular Positioning for {UMTS}}",
+	school        = "{Tampere University of Technology}",
+	address       = "Finland",
+	month         = "April",
+	year          = "2008",
+}
+
+@incollection{GSMGPRS,
+	AUTHOR    = "Mikko Weckström and Maurizio Spirito and Ville Ruutu",
+	TITLE     = "{Mobile Station Location}",
+	BOOKTITLE = "{GSM, GPRS and EDGE Performance - Evolution towards UMTS}",
+	PUBLISHER	= "John Wiley and Sons",
+	PAGES     = "119--139",
+	CHAPTER   = 4,
+	EDITOR    = "{Timo Halonen and Javier Romero and Juan Melero}",
+	EDITION   = 2,
+	YEAR      = 2003
+}
+
+@misc{IEEE80211,
+	AUTHOR	= "{IEEE Computer Society}", 
+	TITLE = "{IEEE Standard for Information Technology - Telecommunications and information exchange between systems - Local and metropolitan area networks - Specific requirements; Part 11: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) Specifications}", 
+	YEAR	  = 2007
+}
+
+@misc{3GPP22071,
+	AUTHOR  = "{3GPP}",
+	TITLE = "{TS 22071, v9.0.0 (2009-12) - 3rd Generation Partnership Project; Technical Specification Group Services and System Aspects; Location Services (LCS); Service Description; Stage 1 (Release 5)}",
+	YEAR    = 2009
+}
+
+@misc{3GPP25133,
+	AUTHOR	= "{3GPP}",
+	TITLE	= "{TS 25133, v9.1.0 (2009-09) - 3rd Generation Partnership Project; Technical Specification Group Radio Access Network; Requirements for support of radio resource management (FDD) (Release 9)}",
+	YEAR    = 2009
+}
+
+@misc{3GPP25214,
+	AUTHOR   = "{3GPP}",
+	TITLE  = "{TS 25214, v5.0.0 (2002-03) - 3rd Generation Partnership Project; Technical Specification Group Radio Access Network; Physical Layer Procedures (FDD) (Release 5)}",
+	YEAR     = 2002
+}
+
+@misc{3GPP25215,
+	AUTHOR	= "{3GPP}",
+	TITLE	= "{TS 25215, v3.0.0 (1999-10) - 3rd Generation Partnership Project; Technical Specification Group Radio Access Network; Physical Layer Measurements (FDD)}",
+	YEAR    = 1999
+}
+
+@misc{3GPP25847,
+	AUTHOR  = "{3GPP}",
+	TITLE = "{TR 25847, v4.0.0 (2001-03) - 3rd Generation Partnership Project; Technical Specification Group Radio Access Network; UE positioning enhancements (Release 4)}",
+	YEAR    = 2001
+}
+
+@misc{ETSI100911,
+	AUTHOR 	= "{ETSI}",
+	TITLE	= "{TS 100911 v6.2.0 (1998-07) - Digital cellular telecommunications system (Phase 2+); Radio subsystem link control (GSM 05.08 version 6.2.0 Release 1997)}",
+	YEAR   	= 1998
+}
+
+@misc{ETSI100912,
+	AUTHOR   = "{ETSI}",
+	TITLE  = "{TS 100912 v8.12.0 (2003-08) - Digital cellular telecommunications system (Phase 2+); Radio subsystem synchronization (3GPP TS 05.10 version 8.12.0 Release 1999)}",
+	YEAR     = 2003
+}
+
+@misc{ETSI101724,
+	AUTHOR  = "{ETSI}",
+	TITLE = "{TS 101724 v8.9.0 (2004-06) - Digital telecommunications system (Phase 2+); Location Services (LCS); Functional description; Stage 2 (3GPP TS 03.71 version 8.9.0 Release 1999)}",
+	YEAR    = 2004
+}
+
+@misc{ETSI300527,
+	AUTHOR 	= "{ETSI}",
+	TITLE	= "{European digital cellular telecommunications system (Phase 2+); Handover Procedures (GSM 03.09 version 4.5.1)}",
+	YEAR   	= 1995
+}
